scoreID無しでメッセージPOST成功

--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -8,7 +8,7 @@ document.getElementById("change-like-" + "<%= params[:message_id] %>").innerText
 var change_button = document.getElementById("change-like-" + "<%= params[:message_id] %>");
 change_button.id = "change-unlike-" + "<%= params[:message_id] %>";
 change_button.setAttribute('data-method', 'delete');
-change_button.setAttribute('href', '/likes/' + '<%= params[:score_id] %>' + '?message_id=' + '<%= params[:message_id] %>' + '&score_id=' + '<%= params[:score_id] %>' + '&user_id=' + '<%= params[:user_id] %>' );
+change_button.setAttribute('href', '/likes/' + '*?message_id=' + '<%= params[:message_id] %>' + '&user_id=' + '<%= params[:user_id] %>' );
 
 // document.getElementById("notheart-" + "<%#= params[:message_id] %>").innerText = "❤️";
 // document.getElementById("notheart-" + "<%#= params[:message_id] %>").id = "heart-" + "<%#= params[:message_id] %>"
