--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -20,11 +20,11 @@ if (message_content == "" &&  message_image == ""){
 				<%= image_tag asset_path("#{@message.image}"), class: "thmb" %>\
 			<% end %>\
 			<span class="score-block__date-content"><%= @message.content %></span>\
-				<a data-confirm="このメッセージを削除してよろしいですか？" class="score-block__delete_button" data-remote="true" rel="nofollow" data-method="delete" href="/messages/<%= params[:score_id] %>?message_id=<%= @message.id %>  &score_id=<%= params[:score_id] %>&user_id=<%= current_user.id %>">削除</a>\
+				<a data-confirm="このメッセージを削除してよろしいですか？" class="score-block__delete_button" data-remote="true" rel="nofollow" data-method="delete" href="/messages/?message_id=<%= @message.id %> &user_id=<%= current_user.id %>">削除</a>\
 			<span class="score-block__date-like">\
 				<span><%= @message.created_at %></span>\
-				<a id="unlike-<%= @message.id %>" href ="/messages/<%= params[:score_id] %>?message_id=<%= @message.id %>">0</a>\
-				<a id="change-like-<%= @message.id %>" data-remote="true" rel="nofollow" data-method="post" href="/likes?message_id=<%= @message.id %>&score_id=<%= params[:score_id] %>&user_id=<%= current_user.id %>">\♡\</a>\
+				<a id="unlike-<%= @message.id %>" href ="/messages/message_id=<%= @message.id %>">0</a>\
+				<a id="change-like-<%= @message.id %>" data-remote="true" rel="nofollow" data-method="post" href="/likes?message_id=<%= @message.id %>&user_id=<%= current_user.id %>">\♡\</a>\
 			</span>\
 		</p>');
 		document.getElementById('message_content').value = ''
