ラウンドしていないユーザーもメッセージ投稿可能

--- a/app/assets/stylesheets/message.scss
+++ b/app/assets/stylesheets/message.scss
@@ -85,6 +85,37 @@
     width: 700px;
     margin: 0 auto;
     padding: 20px;
+    .messageForm-block__label {
+        display: block;
+        margin-top: 15px;
+        font-size: 20px;
+    }
+    .messageForm-block__textfield {
+        border: none;
+        border-radius: 20px;
+        height: 60px;
+        width: 100%;
+        margin-bottom: 10px;
+        /* line-height: 20px; */
+        font-size: 20px;
+    }
+    .messageForm-block__submit {
+        border-radius: 25px;
+        height: 40px;
+        width: 90%;
+        border: none;
+        display: block;
+        margin: 15px auto;
+        font-size: 20px;
+        line-height: 40px;
+        background-color: darkseagreen;
+    }
+    .messageForm-block__submit:hover {
+        cursor: pointer;
+    }
+    .messageForm-block__filefield {
+        font-size: 18px;
+    }
     .messageCourse-message {
         padding: 10px;
         // background-color: aliceblue;
@@ -115,6 +146,10 @@
         background-color: rgba(240, 248, 255, 0.7);
         border-radius: 15px;
         // opacity: 0.9;
+    }
+    .score-block__delete_button {
+        display: block;
+        text-align: right;
     }
 }
 
