掲示板にゴルフ場検索機能追加

--- a/app/assets/stylesheets/message.scss
+++ b/app/assets/stylesheets/message.scss
@@ -21,6 +21,11 @@
             font-size: 15px;
         }
     }
+    .golfcourse-Search__form {
+        display: flex;
+        justify-content: space-evenly;
+        margin-bottom: 20px;
+    }
 }
 
 .score-block {
