トップページデザイン改修

--- a/app/views/home/_following_timeline.html.erb
+++ b/app/views/home/_following_timeline.html.erb
@@ -12,7 +12,7 @@
         <p>直近1週間フォローしているプレイヤーはラウンドしていません。</p>
       <% else %>
         <table class=" table table-striped">
-          <tr>
+          <tr class="table_header">
             <th>プレイ日</th>
             <th>プレイヤー</th>
             <th>コース名</th>
