--- a/app/views/home/_playing_round.html.erb
+++ b/app/views/home/_playing_round.html.erb
@@ -13,7 +13,7 @@
         <p>プレイ中のラウンドはありません。</p>
       <% else %>
         <table class=" table table-striped">
-          <tr>
+          <tr class="table_header">
             <th>プレイ日</th>
             <th>コース名</th>
             <th>スコア</th>
