--- a/app/views/scores/_leader_board.html.erb
+++ b/app/views/scores/_leader_board.html.erb
@@ -2,7 +2,7 @@
   <h2>リーダーボード</h1>
   <table class="table table-striped table-hover">
     <thead class="leader-board__thead">
-      <tr>
+      <tr class="table_header">
         <th class="leader-board__rank">順位</th>
         <th class="leader-board__player">プレイヤー</th>
         <th class="leader-board__score">スコア</th>
