--- a/app/views/scores/_score_card.html.erb
+++ b/app/views/scores/_score_card.html.erb
@@ -2,7 +2,7 @@
   <h2>スコアカード</h2>
   <div class="score-card__table">
     <table class=" table table-striped">
-      <tr>
+      <tr class="table_header">
         <th>ホール</th>
         <th>スコア</th>
       </tr>
@@ -98,8 +98,8 @@
       </tr>
     </table>
 
-    <table class=" table table-striped">
-      <tr>
+    <table class="table table-striped">
+      <tr class="table_header">
         <th>ホール</th>
         <th>スコア</th>
       </tr>
