--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,7 @@
     h5,
     h6 {
         text-align: center;
+        color: #00CC66;
     }
     
     p {
@@ -52,6 +53,8 @@
     .alert-light {
         text-align: center;
         margin-top: 20px;
+        background-color: #00CC66;
+        color: white;
     }
     
     .leader-board__thead {
@@ -121,14 +124,16 @@
         text-align: center;
         font-size: 20px;
         background-color: rgba(255, 255, 255, 0.5);
+        background-color: #00CC66;
         margin-top: 50px;
+        color: white;
     }
     
     body {
         font-family: 'Kosugi Maru', sans-serif;
         color: #222222;
-        background-image: image-url('shiba_bg.jpg');
-        // background-color: yellowgreen;
+        // background-image: image-url('shiba_bg.jpg');
+        background-color: #F0FFF0;
         background-size: cover;
         background-repeat: repeat;
         background-size: 50px 50px;
@@ -139,6 +144,11 @@
     
     table {
         text-align: center;
+    }
+    
+    .table_header {
+        background-color: #00CC66!important;
+        color: white;
     }
     
     .thmb {
