--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -43,9 +43,6 @@
     width: 500px;
     height: auto;
     min-height: 200px;
-    // display: flex;
-    // justify-content: space-around;
-    // align-items: flex-start;
     border-radius: 10px;
     padding: 10px;
     margin: 20px;
@@ -86,6 +83,70 @@
     .home-block__span {
         font-size: 20px;
         font-weight: bold;
+    }
+}
+
+.dekirukoto-index {
+    display: flex;
+    justify-content: center;
+    .dekirukoto-index__group {
+        width: 230px;
+        margin: 25px;
+        background-color: white;
+        padding: 15px;
+    }
+    h4 {
+        font-size: 20px;
+    }
+    .dekirukoto-index__image {
+        width: 100%;
+    }
+}
+
+.loginmae {
+    background-image: image-url('bg-golf.jpg');
+    // background-image: image-url('shiba_bg.jpg');
+    width: 100%;
+    height: 500px;
+    background-size: cover;
+    margin-bottom: 30px;
+    .loginmae__logo {
+        width: 450px;
+        padding-top: 240px;
+        display: block;
+        margin: 0 auto;
+        padding: 15px;
+        padding-top: 80px;
+    }
+    .loginmae__p {
+        display: block;
+        text-align: center;
+        margin-bottom: 60px;
+    }
+    .loginmae_button-wrap {
+        display: flex;
+        flex-direction: column;
+    }
+    .loginmae__button {
+        width: 150px;
+        text-align: center;
+        display: block;
+        color: white !important;
+        text-align: center;
+        // background-color: red;
+        height: 30px;
+        line-height: 30px;
+        border-radius: 10px;
+        margin: 10px auto;
+    }
+    .buton_green {
+        background-color: #00CC00;
+    }
+    .buton_yellow {
+        background-color: #FFCC00;
+    }
+    .buton_blue {
+        background-color: #0066FF;
     }
 }
 
@@ -145,6 +206,21 @@
             margin-top: 5px;
             font-size: 25px;
             background-color: rgba(0, 0, 0, 0);
+        }
+    }
+    .dekirukoto-index {
+        flex-direction: column;
+        .dekirukoto-index__group {
+            margin: 30px auto;
+            width: 80%;
+        }
+        .dekirukoto-index__image {
+            width: 100%;
+        }
+    }
+    .loginmae {
+        .loginmae__logo {
+            width: 80%;
         }
     }
 }
