--- a/app/assets/stylesheets/score.scss
+++ b/app/assets/stylesheets/score.scss
@@ -54,10 +54,8 @@
         }
         .score-block__group {
             padding: 10px;
-            // background-color: aliceblue;
-            background-color: rgba(240, 248, 255, 0.7);
+            background-color: white;
             border-radius: 15px;
-            // opacity: 0.9;
         }
     }
     
