--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -143,7 +143,7 @@
         font-size: 20px;
     }
     .user-devise-block__textfield {
-        border: none;
+        // border: none;
         border-radius: 6px;
         height: 40px;
         width: 100%;
